--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,6 @@ Build-Depends: debhelper (>= 9.0.0),
                libglib2.0-dev (>= 2.34.3),
                libfcgi-dev,
                shared-mime-info,
-               peg,
                libxml2-utils
 Standards-Version: 3.9.5
 Section: libs
@@ -21,11 +20,8 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libbalde0 (= ${binary:Version}),
-         libbalde-template0 (= ${binary:Version}),
          libglib2.0-0 (>= 2.34.3)
-Description: Microframework for C based on GLib and bad intentions
- .
- (Helper tools)
+Description: Microframework for C based on GLib (helper tools)
 
 Package: libbalde0-dev
 Section: libdevel
@@ -35,9 +31,8 @@ Depends: ${shlibs:Depends},
          libbalde0 (= ${binary:Version}),
          libglib2.0-dev,
          libfcgi-dev
-Description: Microframework for C based on GLib and bad intentions
- .
- (Development files)
+Suggests: balde-tools (= ${binary:Version})
+Description: Microframework for C based on GLib (development files)
 
 Package: libbalde0
 Section: libs
@@ -48,16 +43,4 @@ Depends: ${shlibs:Depends},
          libglib2.0-bin (>= 2.34.3),
          libfcgi,
          shared-mime-info
-Description: Microframework for C based on GLib and bad intentions
- .
- (Main shared library)
-
-Package: libbalde-template0
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         libglib2.0-0 (>= 2.34.3)
-Description: Microframework for C based on GLib and bad intentions
- .
- (Template generator library - internal)
+Description: Microframework for C based on GLib (shared libraries)
